client/sass/layout/_container.scss
section.container {
    position: fixed;
    cursor: text;
    
    &.dragging {
        cursor: all-scroll;
    }
    
    section.space {
        width:  100%;
        height: 100%;
        @include transition(1.5s $defaultCurve);
        @include transition-property(opacity, -webkit-filter);
        
        &.obscured {
            opacity: .333;
            -webkit-filter: blur(20px);
        }

        section.content {
            transform-origin: 0 0;
            -webkit-transform-origin: 0 0;
            @include transform(scale(1));
            position: relative;
            z-index: 1;
        }
    }
    
    > .delete.trash {
        $trashSize: $col * .5;
        z-index:    999;
        bottom:-$trashSize;
        right: 50%;
        margin-left: -$trashSize / 2;
        height: $trashSize;
        width:  $trashSize;
        position:   fixed;
        color: $colorType;
        text-align: center;
        @include transition-timing-function($defaultCurve);
        @include transition-duration(.5s);
        @include transition-property(bottom, transform, -webkit-transform);
        @include transform(scale3d(0.1, 0.1, 1.0));
        
        &:after {
            content: "×";
            font-size: $typeHeaderSize * 4;
            font-weight: $fontWeightLight;
            position: absolute;
            width: 100%;
            text-align: center;
            top: 0;
            left: 0;
        }
        
        &.visible {
            bottom: 0;
            @include transform(scale3d(.75, .75, 1.0));            
        }
        
        &.overlap {
            @include transform(scale3d(1.0, 1.0, 1.0));
            @include hoverWarningAnimation;
        }  
    }
}

